fixed display of modal window on mobile

--- a/Resources/sass/lightning.scss
+++ b/Resources/sass/lightning.scss
@@ -202,12 +202,14 @@ div.captcha_container {
   display: none;
 }
 #dialog_box{
-  width:600px;
+  width: 90%;
+  max-width: 600px;
   overflow: hidden;
   box-shadow: 0 5px 5px #333;
-  margin: 0px 0px 0px -300px;
+  margin: auto;
   position: absolute;
-  left: 50%;
+  left: 0;
+  right: 0;
   top: 100px;
   z-index: 1500;
   display: none;
